# earthnet-protocol

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
examples/: gen_vectors.rs
proto/: earthnet.proto
src/: compat.rs  detect.rs  lib.rs  sign.rs
tests/: roundtrip.rs  signal.rs  tier.rs  vectors.rs
